# wp4-text2gloss

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
src/amr_to_sl_repr/: converter.py  dictionary.py  download_vgt_videos.py  inference_server.py  linearizer.py  pipeline.py  text2amr.py  utils.py  vec_similarity.py  vgt_preprocessing.py
src/amr_to_sl_repr/api/: inference_server.py
src/amr_to_sl_repr/pipeline/: text2amr.py  utils.py  vgt_dictionary.py  vgt_preprocessing.py
src/amr_to_sl_repr/process_dictionary/: download_vgt_videos.py  vgt_openai_translations.py  vgt_preprocessing.py
src/amr_to_sl_repr/simplification/: get_wsd_from_api.py  translate.py
src/amr_to_sl_repr/text2gloss/: build_dataset.py  data-analysis.ipynb  run_translation.py
src/amr_to_sl_repr/utils/: add_possible_synonyms.py  download_vgt_videos.py
src/amr_to_sl_repr/wn_translate/: translate.py
src/text2gloss/: evaluate.py  pipeline.py  text2amr.py  utils.py  vec_similarity.py
src/text2gloss/api/: glosses.db  inference_server.py  main.py  vgt-woordenboek-27_03_2023+openai+wn_transls.json
src/text2gloss/evaluate/: evaluate_glosses.py  generate_glosses.py
src/text2gloss/process_dictionary/: download_vgt_videos.py  download_videos.py  preprocess.py  reformat.py  translate_openai.py  vgt_openai_translations.py  vgt_preprocessing.py
src/text2gloss/rule_based/: README.md  complex_sents.py  complex_sents_helpers.py  dutch_to_gloss.py  find_needed_clauses.py  gloss_ids.json  helpers.py  locative_verbs.txt  no_clear_gloss_id.txt  reorder_glosses.py  reorder_glosses_helpers.py  requirements.txt  scheidbare_ww.txt  scheidbare_ww_scheidbaar_deel.txt  transform_comp.py  transform_conj.py  transform_neg.py  transform_num.py  transform_plural.py  transform_prep.py  transform_pron_verb.py  transform_ques.py  transform_with_gloss_ids.py  transform_word_specific.py  translate.py  verb_with_prep.json  word_lists.py
