[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text2gloss"
# Do not forget to change in __init__.py too!
version = "0.0.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "A pipeline to go from text to glosses"
readme = "README.md"
keywords = ["sign language translation", "machine translation", "sign language", "gloss", "wordnet", "gpt", "openai"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.8"
dependencies = [
        "accelerate",
        "fastapi",
        "gunicorn",
        "mbart_amr @ git+https://github.com/BramVanroy/multilingual-text-to-amr.git",
        "networkx",
        "openai",
        "optimum",
        "pandas",
        "penman>=1.2.2",
        "requests",
        "sentence_transformers",
        "tqdm",
        "typing_extensions",
        "uvicorn[standard]",
        "wn",
]

[project.urls]
homepage = "https://github.com/BramVanroy/text2gloss"
documentation = "https://github.com/BramVanroy/text2gloss"
repository = "https://github.com/BramVanroy/text2gloss.git"
changelog = "https://github.com/BramVanroy/text2gloss/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# https://stackoverflow.com/a/72524073/1150683
dev = ["flake8", "black", "isort", "mypy", "pytest", "twine"]

# TOOLS
[tool.black]
line-length = 119
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "text2gloss"
lines_after_imports = 2

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234

[project.scripts]
translate-openai = "text2gloss.process_dictionary.vgt_openai_translations:main"
download-vgt-videos = "text2gloss.process_dictionary.download_vgt_videos:main"
translate-wn = "text2gloss.process_dictionary.vgt_preprocessing:main"
text2gloss = "text2gloss.pipeline:main"
