[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text2gloss"
# Do not forget to change in __init__.py too!
version = "1.3.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "A pipeline to go from text to glosses"
readme = "README.md"
keywords = ["sign language translation", "machine translation", "sign language", "gloss", "wordnet", "gpt", "openai"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.9"
dependencies = [
        "accelerate==0.18.0",
        "databases[aiosqlite]==0.7.0",
        "fastapi==0.95.1",
        "ftfy==6.1.1",
        "mbart_amr @ git+https://github.com/BramVanroy/multilingual-text-to-amr.git",
        "openai==0.27.4",
        "optimum==1.8.2",
        "pandas==2.0.1",
        "penman==1.2.2",
        "pydantic==1.10.7",
        "requests==2.28.2",
        "sentence-transformers==2.2.2",
        "spacy==3.5.3",
        "telwoord==0.4",
        "tqdm==4.65.0",
        "typing_extensions==4.5.0",
        "uvicorn[standard]==0.21.1",
        "wn==0.9.3",
]

[project.urls]
homepage = "https://github.com/BramVanroy/text2gloss"
documentation = "https://github.com/BramVanroy/text2gloss"
repository = "https://github.com/BramVanroy/text2gloss.git"
changelog = "https://github.com/BramVanroy/text2gloss/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# https://stackoverflow.com/a/72524073/1150683
dev = ["flake8", "black", "isort"]

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2gloss = ["**/*.txt", "**/*.json", "**/*.db"]

[tool.black]
line-length = 119
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "text2gloss"
lines_after_imports = 2

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234

[project.scripts]
reformat-dictionary = "text2gloss.process_dictionary.reformat:main"
translate-openai = "text2gloss.process_dictionary.translate_openai:main"
download-videos = "text2gloss.process_dictionary.download_videos:main"
preprocess-gloss = "text2gloss.process_dictionary.preprocess:main"
text2gloss = "text2gloss.pipeline:main"
rb-text2gloss = "text2gloss.rule_based.translate:main"
